kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-deployment
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper-pod
  template:
    metadata:
      labels:
        app: zookeeper-pod
    spec:
      containers:
        - name: zookeeper-pod
          image: confluentinc/cp-zookeeper:7.0.0
          ports:
            - containerPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-deployment
  labels:
    app: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker-pod
  template:
    metadata:
      labels:
        app: broker-pod
    spec:
      containers:
        - name: broker-pod
          image: confluentinc/cp-kafka:7.0.0
          ports:
            - containerPort: 29092
            - containerPort: 9092
            - containerPort: 9101
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
spec:
  selector:
    app: zookeeper-pod
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: broker-service
spec:
  type: NodePort
  selector:
    app: broker-pod
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
      nodePort: 30092
