kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mykube-deployment
  labels:
    app: mykube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mykube-pod
  template:
    metadata:
      labels:
        app: mykube-pod
    spec:
      containers:
        - name: mykube-pod
          image: mykube:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 0.5
            requests:
              cpu: 0.4
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 120
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  name: mykube-service
spec:
  type: NodePort
  selector:
    app: mykube-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30180
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mykube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /mykube(/|$)(.*)
        backend:
          service:
            name: mykube-service
            port:
              number: 8080
